added registry, config,api gateway server

--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/departmentdb
-spring.datasource.username=root
-spring.datasource.password=cameroun
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/departmentdb
+#spring.datasource.username=root
+#spring.datasource.password=cameroun
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.application.name=DEPARTMENT-SERVICE
+spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=*
+spring.zipkin.base-url=localhost:9411/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
