--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-server.port=8180
-spring.datasource.url=jdbc:mysql://localhost:3307/employeedb
-spring.datasource.username=root
-spring.datasource.password=cameroun
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#server.port=8180
+#spring.datasource.url=jdbc:mysql://localhost:3307/employeedb
+#spring.datasource.username=root
+#spring.datasource.password=cameroun
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+management.endpoints.web.exposure.include=*
+spring.application.name=EMPLOYEE-SERVICE
+spring.config.import=optional:configserver:http://localhost:8888
+spring.zipkin.base-url=localhost:9411/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
